--- a/ejercicio 1 2 3.css
+++ b/ejercicio 1 2 3.css
@@ -91,6 +91,7 @@ body{
         flex-direction: column;
         height: auto;
     }
+    
     .aside{
         display: flex;
         justify-content: center;
@@ -103,9 +104,11 @@ body{
     }
         .article{
             background: #0286fa;
+            width: 100%; /* added */
         }
         .navigation{
             background: #8dadc2;
+            width: 100%; /* added */
         }
     .aside{
         background: #80010e;
@@ -118,5 +121,10 @@ body{
 @media all and (max-width:400px){
     .aside{
         flex-direction: column;
+    }
+    /* added */
+    .advertising{
+        width: 100%; 
+
     }
 }
