--- a/ejercicio 1 2 3.css
+++ b/ejercicio 1 2 3.css
@@ -10,10 +10,11 @@ body{
 .father{
     display: flex;
     flex-flow: column nowrap;
+    /* max-width: 1200px; */ /* added */
 }
 
 .header{
-    background: #000;
+    background: black;
     display: flex;
     flex-flow: column nowrap;
 }
@@ -87,7 +88,7 @@ body{
         flex-direction: column;
         background: yellow;
     }
-    .menu{
+    /* .menu{
         flex-direction: column;
         height: auto;
     }
@@ -95,6 +96,23 @@ body{
     .aside{
         display: flex;
         justify-content: center;
+    } */
+    .menu{
+        flex-direction: column;
+        height: auto;
+    }
+    .logo, .nav, .social {
+        width: 100%; /* Take up full width */
+        margin-bottom: 10px; /* Add some space between elements */
+    }
+    
+    .aside{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .advertising{
+        width: 100%;
     }
 }
 @media all and (max-width:600px){
